--- a/duckdb.ipynb
+++ b/duckdb.ipynb
@@ -305,6 +305,88 @@
    "source": [
     "con.execute(\"COPY customer TO 'customer.csv' (HEADER, DELIMITER ',')\")\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7bbe68aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Schema of 'customer' table:\n",
+      "      column_name column_type null   key default extra\n",
+      "0             Key     VARCHAR  YES  None    None  None\n",
+      "1        ParentId     VARCHAR  YES  None    None  None\n",
+      "2            Name     VARCHAR  YES  None    None  None\n",
+      "3         Channel     VARCHAR  YES  None    None  None\n",
+      "4  Channel Parent     VARCHAR  YES  None    None  None\n",
+      "5  Customer Since     VARCHAR  YES  None    None  None\n",
+      "6        Industry     VARCHAR  YES  None    None  None\n",
+      "7        Location     VARCHAR  YES  None    None  None\n",
+      "8   Sales Manager     VARCHAR  YES  None    None  None\n",
+      "9     Salesperson     VARCHAR  YES  None    None  None\n"
+     ]
+    }
+   ],
+   "source": [
+    "import duckdb\n",
+    "\n",
+    "con = duckdb.connect('app/data/data.db')\n",
+    "\n",
+    "try:\n",
+    "    schema_df = con.execute(\"DESCRIBE customer\").fetchdf()\n",
+    "    print(\"Schema of 'customer' table:\")\n",
+    "    print(schema_df)\n",
+    "except Exception as e:\n",
+    "    print(\"Failed to describe 'customer' table:\", e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d362e602",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "      column_name column_type null   key default extra\n",
+      "0             Key     VARCHAR  YES  None    None  None\n",
+      "1        ParentId     VARCHAR  YES  None    None  None\n",
+      "2            Name     VARCHAR  YES  None    None  None\n",
+      "3         Channel     VARCHAR  YES  None    None  None\n",
+      "4  Channel Parent     VARCHAR  YES  None    None  None\n",
+      "5  Customer Since     VARCHAR  YES  None    None  None\n",
+      "6        Industry     VARCHAR  YES  None    None  None\n",
+      "7        Location     VARCHAR  YES  None    None  None\n",
+      "8   Sales Manager     VARCHAR  YES  None    None  None\n",
+      "9     Salesperson     VARCHAR  YES  None    None  None\n",
+      "  Location\n",
+      "0         \n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
+   "source": [
+    "import duckdb\n",
+    "con = duckdb.connect('app/data/data.db')\n",
+    "print(con.execute(\"DESCRIBE customer\").fetchdf())\n",
+    "print(con.execute(\"SELECT Location FROM customer LIMIT 1\").fetchdf())"
+   ]
   }
  ],
  "metadata": {
